--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
   },
