--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "express": "^4.19.2",
-    "nodemon": "^3.1.0",
     "dotenv": "^16.3.1",
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2"
   },
